--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam fuga ratione adipisci vero, beatae reiciendis magni sit voluptas iure doloribus facilis dolorem dolores ipsam vitae nisi eligendi dignissimos a quia.</p>
 </body>
 </html>
